--- a/components/accordeon/Accordion.module.scss
+++ b/components/accordeon/Accordion.module.scss
@@ -1,10 +1,50 @@
-.header_container{
-display: flex;
 
+
+.accordion__container__animation {
+  transition: all .3s ease;
+  max-height: 100vh;
+  .accordion__container__item {
+    padding: 0 15px 15px 15px;
+    font-size: 16px;
+    line-height: 150%;
+    color: #212121;
+  }
+}
+
+.accordion__container {
+  transition: all .3s;
+  max-height: 60px;
+  overflow: hidden;
+}
+
+.accordion__container__item {
+  padding: 0 15px 15px 15px;
+  font-size: 16px;
+  line-height: 150%;
+  color: #212121;
+}
+
+.arrow {
+  transform: rotate(-90deg);
+  transition: all 0.3s;
+  path {
+    fill: #212121;
+  }
+}
+
+.arrow__show {
+  transition: all 0.2s;
+   path {
+    fill: #212121;
+  }
+}
+
+.header_container {
+  display: flex;
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 30px;
+  padding: 16px 15px;
   background: #E0EFDE;
   border-radius: 6px;
   font-weight: 400;
@@ -13,7 +53,6 @@ display: flex;
   cursor: pointer;
   margin-bottom: 12px;
   box-sizing: border-box;
-
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -21,3 +60,4 @@ display: flex;
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
 }
+
