--- a/features/resources/tab_questions/Questions.module.scss
+++ b/features/resources/tab_questions/Questions.module.scss
@@ -1,5 +1,46 @@
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
 .questions_container{
   display: flex;
   justify-content: center;
   margin: 0 auto;
+}
+
+.faq__items__item {
+  background: #f5f5f5;
+  &__info {
+    border-bottom: 1px solid #c8c8c8;
+    span {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 20px 20px 20px 15px;
+      h1 {
+        background: transparent;
+        cursor: pointer;
+        font-size: 22px;
+        font-weight: 400;
+        color: color(dark);
+        display: flex;
+        justify-content: space-between;
+      }
+  
+      path {
+        fill: #212121;
+      }
+    }
+  
+    p {
+      padding: 0 15px 25px;
+      font-size: 16px;
+      line-height: 150%;
+      color: #212121;
+      position: relative;
+      overflow: hidden;
+      margin: -3px 0 0;
+      transition: all .1s;
+    }
+  }
+ 
 }
