--- a/features/typo_size/desc/Description.module.scss
+++ b/features/typo_size/desc/Description.module.scss
@@ -62,7 +62,8 @@
   max-width: 100%;
   overflow: auto;
   background: #FFFFFF;
-  box-shadow: 0 0 12px rgb(44 42 42 / 65%);
+  box-shadow: 0 2px 12px rgb(44 42 42 / 65%);
+  margin: 20px 0 0 0;
   transition: all 0.3s;
   &_text{
     font-weight: 400;
