--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -11,19 +11,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(19, 28, 8, 0.8);
-  backdrop-filter: blur(3px);
   animation-name: bgModal;
   animation-duration: 300ms;
   @include phoneScreen {
     padding: 0 10px;
   }
 
+  &.black {
+    background: rgba(19, 28, 8, 0.8);
+    backdrop-filter: blur(3px);
+  }  
+
+  &.white {
+    background: color(white);
+    backdrop-filter: blur(3px);
+  }  
+
   &_close {
-    position: absolute;
-    right: 15px;
-    top: 20px;
+    display: flex;
+    justify-content: flex-end;
     cursor: pointer;
+    padding: 10px;
   }
 
   .modal_dialog {
@@ -71,7 +79,30 @@
     &__full_modal {
       max-width: 1920px;
       border-radius: 0;
+      padding: 0 0 0 0;
+      height: 100vh;
+      .modal_content {
+        height: 100vh;
+      }
+
+      @include ipadScreen {
+        padding: 30px 0 0 0;
+        .modal_content {
+          padding: 10px !important;
+          .modal_close {
+            position: relative !important;
+            padding: 10px !important;
+            cursor: pointer !important;
+          }
+        }
+      }
+    }
+
+    &__freedom_modal {
+      max-width: 1920px;
+      border-radius: 0;
       padding: 0;
+      background: color(white);
     }
   }
 }
