--- a/features/contacts/Contacts.module.scss
+++ b/features/contacts/Contacts.module.scss
@@ -25,7 +25,8 @@
       a {
         display: flex;
         align-items: center;
-        font-size: 18px;
+        gap: 4px;
+        font-size: 16px;
         color: rgb(108, 109, 112);
         opacity: 0.9;
         transition: all 0.3s;
@@ -34,9 +35,8 @@
         }
 
         &:first-child {
-          margin-right: 20px;
           svg {
-            width: 26px;
+            width: 22px;
           }
         }
 
@@ -51,9 +51,9 @@
 
     &_img {
       img {
-        width: 100%;
-        height: 100%;
-        display: block;
+       width: 100%;
+       height: 100%;
+       display: block;
       }
     }
 
