--- a/components/equipment/Equipment.module.scss
+++ b/components/equipment/Equipment.module.scss
@@ -1,8 +1,17 @@
+@import '../../styles/mixins.scss';
+@import '../../styles/variables.scss';
+
 .equipment_container{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 10px;
+  gap: 20px;
   margin-bottom: 40px;
+  @include ipadScreen {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
   &_item{
     overflow: hidden;
     border-radius: 12px;
@@ -11,6 +20,7 @@
       transform: scale(1.1);
 
     }
+
     img{
       width:100%;
       object-fit: cover;
