--- a/components/own_object/OwnObject.module.scss
+++ b/components/own_object/OwnObject.module.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 25px 25px;
+  gap: 20px 20px;
   grid-template-areas:
     "col1 col2 col3"
     "col4 col5 col5";
@@ -17,9 +17,8 @@
   .col5 { grid-area: col5; }
 
   @include ipadScreen {
-    gap: 12px 12px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(290px,1fr));
+    display: flex;
+    flex-direction: column;
     gap: 20px;
   }
 
@@ -28,6 +27,10 @@
     position: relative;
     overflow: hidden;
     max-height: 350px;
+    @include ipadScreen {
+      height: 300px;
+    }
+    
     &:hover {
       .object__slider {
         left: 0;
