--- a/components/common/container/Container.module.scss
+++ b/components/common/container/Container.module.scss
@@ -9,25 +9,19 @@
     max-width: 1390px;
     margin: 0 auto;
   }
-
-  // @include tabletScreen {
-  //   padding: 50px 30px;
-  // }
-
-  // @include ipadScreen {
-  //   padding: 50px 15px;
-  // }
-
-  // @include phoneScreen {
-  //   padding: 50px 10px;
-  // }
 }
 
 .wrapper_clear {
   max-width: 1390px;
   margin: 0 auto;
   overflow: hidden;
-  padding: 0 10px;
+  padding: 0 40px;
+  @include ipadScreen {
+    padding: 0 20px;
+  }
+  @include phoneScreen {
+    padding: 0 10px;
+  }
 }
 
 .no_padding {
