--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -3,17 +3,18 @@
 
 .news_container {
   &_item {
-    display: grid;
+    display: flex;
+    justify-content: space-between;
     margin-top: 40px;
     transition: all 0.3s;
     border-radius: 15px;
-    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
     background-color: transparent;
     row-gap: 10px;
-    margin-left: 5px;
     box-shadow: 0 0 35px rgb(126 126 126 / 16%);
     @include ipadScreen {
       row-gap: 0;
+      flex-direction: column;
+      align-items: center;
     }
 
     button {
@@ -21,7 +22,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 17px #088122;
+      box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
       transition: all 0.3s;
       border-color: #0AB016;
       button {
@@ -34,17 +35,29 @@
     }
 
     &_image {
-      .news_container_item_right {
-        order: 0;
-        border-radius: 10px 0 0 10px;
-        @include ipadScreen {
-          order: 1;
-          border-radius: 0 0 10px 10px;
-          gap: 20px;
-        }
+      width: 40%;
+      @include phoneScreen {
+        width: 60%;
       }
 
+      @media (max-width: 500px) {
+        width: 100%;
+      }
+
+      &:nth-child(even) {
+        .news_container_item_right {
+          order: 0;
+          border-radius: 10px 0 0 10px;
+          @include ipadScreen {
+            order: 1;
+            border-radius: 0 0 10px 10px;
+            gap: 20px;
+          }
+        }
+      }
+    
       img {
+        width: 100%;
         order: 1;
         border-radius: 0 10px 10px 0;
         @include ipadScreen {
@@ -58,7 +71,7 @@
       background-color: #0AB016;
       transition: all 0.3s;
       span {
-        color: white;
+        color: color(white);
       }
 
       svg {
@@ -71,12 +84,12 @@
       }
 
       &_title {
-        color: white;
+        color: color(white);
         transition: all 0.3s;
       }
 
       &_desc {
-        color: white;
+        color: color(white);
         transition: all 0.3s;
         
       }
@@ -84,7 +97,6 @@
 
     img {
       width: 100%;
-      height: 376px;
       border-radius: 10px 0 0 10px;
       overflow: hidden;
       order: 0;
@@ -98,18 +110,21 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 20px 40px;
+      padding: 20px;
       transition: all 0.3s;
       border-radius: 0 10px 10px 0;
       order: 1;
+      width: 70%;
       @include ipadScreen {
         border-radius: 0 0 10px 10px;
         padding: 10px 10px 20px 10px;
         gap: 30px;
+        width: 100%;
+        box-sizing: border-box;
       }
 
       span {
-        color: #212121;
+        color: color(dark);
         font-weight: 500;
         display: flex;
         align-items: center;
@@ -123,18 +138,23 @@
 
       &_title {
         font-weight: 600;
-        font-size: 35px;
+        font-size: 25px;
         font-style: normal;
         line-height: 50px;
         letter-spacing: 0.025em;
-        color: #212121;
+        color: color(dark);
+        @media (max-width: 550px) {
+          font-weight: 500;
+          font-size: 22px;
+          font-style: normal;
+          line-height: 145%;
+        }
       }
 
       &_desc {
         font-size: 16px;
         line-height: 150%;
-        color: #212121;
-        padding-top: 20px;
+        color: color(dark);
         @include ipadScreen {
           padding-top: 0;
         }
@@ -153,40 +173,72 @@
   .news_container {
     &_item {
       display: grid;
-      margin-top: 40px;
       transition: all 0.3s;
       border-radius: 15px;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       background-color: transparent;
       row-gap: 10px;
-      margin-left: 5px;
       box-shadow: 0 0 35px rgb(126 126 126 / 16%);
+      overflow: hidden;
+      &:hover {
+        box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
+        transition: all 0.3s;
+        border-color: #0AB016;
+        &_right {
+          background-color: #0AB016;
+          transition: all 0.3s;
+          span {
+            color: color(white);
+          }
+  
+          svg {
+            width: 22px;
+            height: 22px;
+            path {
+              fill: white;
+            }
+          }
+  
+          &_title {
+            color: color(white);
+            transition: all 0.3s;
+          }
+  
+          &_desc {
+            color: color(white);
+            transition: all 0.3s;
+  
+          }
+
+          button {
+            padding-left: 20px;
+          }
+        }
+      }
+
       @include ipadScreen {
         row-gap: 0;
+      }
+
+      &_image {
+        width: 100%;
+        @include phoneScreen {
+          width: 60%;
+        }
       }
 
       button {
         transition: all 0.3s;
       }
 
-      &:hover {
-        button {
-          padding-left: 20px;
-        }
-      }
-
       &:first-child {
         transition: all 0.3s;
       }
 
-/*      &:nth-child(even) {
-        &:hover {
-          box-shadow: 0 0 17px #088122;
-          transition: all 0.3s;
-          border-color: #0AB016;
-        }
+      &:nth-child(even) {
         .news_container_item_right {
-          border-radius: 10px 0 0 10px;
+          width: 100%;
+          box-sizing: border-box;
           @include ipadScreen {
             border-radius: 0 0 10px 10px;
             gap: 20px;
@@ -200,34 +252,6 @@
             border-radius: 10px 10px 0 0;
           }
         }
-      }*/
-
-      &:hover &_right {
-        background-color: #0AB016;
-        transition: all 0.3s;
-        span {
-          color: white;
-        }
-
-        svg {
-          width: 22px;
-          height: 22px;
-          path {
-
-            fill: white;
-          }
-        }
-
-        &_title {
-          color: white;
-          transition: all 0.3s;
-        }
-
-        &_desc {
-          color: white;
-          transition: all 0.3s;
-
-        }
       }
 
       img {
@@ -237,19 +261,18 @@
         overflow: hidden;
         order: 0;
         object-fit: cover;
-        @include ipadScreen {
-          border-radius: 10px 10px 0 0;
-        }
       }
 
       &_right {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 20px 40px;
+        padding: 20px;
         transition: all 0.3s;
-        border-radius: 10px;
         order: 1;
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 0;
         @include ipadScreen {
           border-radius: 10px;
           padding: 10px 10px 20px 10px;
@@ -257,7 +280,7 @@
         }
 
         span {
-          color: #212121;
+          color: color(dark);
           font-weight: 500;
           display: flex;
           align-items: center;
@@ -271,19 +294,24 @@
 
         &_title {
           font-weight: 600;
-          font-size: 35px;
+          font-size: 25px;
           font-style: normal;
           line-height: 50px;
           letter-spacing: 0.025em;
-          color: #212121;
+          color: color(dark);
+          @media (max-width: 1200px) {
+            font-weight: 500;
+            font-size: 22px;
+            font-style: normal;
+          }
         }
 
         &_desc {
           font-size: 16px;
           line-height: 150%;
-          color: #212121;
+          color: color(dark);
           padding-top: 20px;
-          @include ipadScreen {
+          @media (max-width: 1200px) {
             padding-top: 0;
           }
         }
@@ -293,7 +321,7 @@
 
   &_item {
     &:hover img {
-      box-shadow: 0 0 17px #088122;
+      box-shadow: 0px 0px 30px rgba(10, 176, 22, 0.4);
     }
 
     &:hover {
@@ -304,11 +332,12 @@
     }
 
     button {
+      position: relative;
       transition: all 0.3s;
       position: absolute;
       top: 3%;
       left: 3%;
-      color: white;
+      color: color(white);
       span {
         display: flex;
         align-items: center;
@@ -323,24 +352,21 @@
       }
     }
 
-    position: relative;
-
     &_desc {
       text-align: center;
       margin-top: 25px;
-
       a {
         font-size: 16px;
         line-height: 150%;
-        color: #212121;
+        color: color(dark);
         font-weight: 400;
         transition: all 0.3s;
-
         &:hover {
           color: #088122;
         }
       }
     }
+
     img {
       width: 100%;
       height: 376px;
@@ -348,8 +374,8 @@
       border-radius: 20px;
       transition: all 0.3s;
     }
-    &_svg {
 
+    &_svg {
       svg {
         position: absolute;
         top: 0;
@@ -361,5 +387,4 @@
       }
     }
   }
-
 }
