--- a/features/about/tab_job/jobModal/ModalJob.module.scss
+++ b/features/about/tab_job/jobModal/ModalJob.module.scss
@@ -121,7 +121,7 @@
         padding: 5px;
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: flex-start;
         width: 100%;
   
         p {
