--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -4,12 +4,11 @@
 //Форма заказа
 .support__form {
   max-width: 850px;
-  margin: 0 auto 0;
+  margin: 0 auto 80px;
   background: color(white);
-  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
+  box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 40px 20px 25px 20px;
-  margin-bottom: 80px;
   @media (max-width: 500px) {
     padding: 40px 10px 25px 10px;
     margin-bottom: 40px;
@@ -103,7 +102,7 @@
           padding: 5px;
           display: flex;
           align-items: center;
-          justify-content: start;
+          justify-content: flex-start;
           width: 100%;
           p {
             width: 100px;
@@ -133,7 +132,6 @@
               background-image: url('../../../public/images/close.svg');
               background-size: cover;
               background-repeat: no-repeat;
-              position: absolute;
               width: 12px;
               height: 12px;
               position: absolute;
@@ -177,7 +175,7 @@
     margin: 30px 0 20px 0;
     @include phoneScreen {
       flex-direction: column-reverse;
-      justify-content: start;
+      justify-content: flex-start;
       align-items: flex-start;
       gap: 28px;
     }
