--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -197,9 +197,8 @@
     }
   }
   .overflow {
-    margin-top: 5px;
     transition: all 0.3s;
-    height: 15px;
+    height: 20px;
     opacity: 0;
     transform: translateY(-10px);
     span {
@@ -208,20 +207,37 @@
   }
   &_error {
     color: color(error);
-    border-radius: 8px;
     font-size: 12px;
     position: relative;
     .overflow__auto {
-      margin-top: 5px;
       opacity: 1;
       transition: all 0.3s;
       transform: translateY(0px);
-      height: 15px;
+      height: 20px;
     }
     input {
       border: 1px solid #d2d2d2;
-      padding: 10px;
+      padding: 10px 20px 10px 10px;
       border-radius: 5px;
+      &:focus {
+        border: 1px solid color(green);
+      }
+    }
+    .icon_clear {
+      cursor: pointer;
+      position: absolute;
+      right: 10px;
+      top: 20%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      svg {
+        opacity: 0.4;
+        transition: all 0.1s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 }
