--- a/features/decision/modal/Modals.module.scss
+++ b/features/decision/modal/Modals.module.scss
@@ -66,11 +66,10 @@
   }
   .add_input_block {
     width: 100%;
-    margin-bottom: 12px;
     &_left {
       input {
         border: 1px solid #d2d2d2;
-        padding: 10px;
+        padding: 10px 25px 10px 10px;
         border-radius: 5px;
         &:focus {
           border: 1px solid color(green);
@@ -95,9 +94,8 @@
       .add__form__item__input {
         position: relative;
         .overflow {
-          margin-top: 5px;
           transition: all 0.3s;
-          height: 23px;
+          height: 20px;
           opacity: 0;
           transform: translateY(-10px);
           span {
@@ -106,20 +104,17 @@
         }
         &_error {
           color: color(error);
-          border-radius: 8px;
           font-size: 12px;
           position: relative;
-          margin-bottom: 12px;
           .overflow__auto {
-            margin-top: 5px;
             opacity: 1;
             transition: all 0.3s;
             transform: translateY(0px);
-            height: 23px;
+            height: 20px;
           }
           input {
             border: 1px solid #d2d2d2;
-            padding: 10px;
+            padding: 10px 20px 10px 10px;
             border-radius: 5px;
             &:focus {
               border: 1px solid color(green);
@@ -133,11 +128,9 @@
             display: flex;
             align-items: center;
             gap: 8px;
-
             svg {
               opacity: 0.4;
               transition: all 0.1s ease;
-
               &:hover {
                 opacity: 1;
               }
@@ -146,7 +139,6 @@
         }
       }
     }
-
   }
 
 
