--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -5,15 +5,17 @@
   display: flex;
   justify-content: center;
   margin: 40px auto;
-
 }
-
 .catalog_title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   @include ipadScreen {
     flex-direction: column;
+  }
+  .buttons {
+    display: flex;
+    gap: 10px;
   }
   .disabled_active {
     border-radius: 10px;
@@ -103,7 +105,6 @@
     }
   }
 }
-
 .catalog_box {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -267,6 +268,83 @@
     }
   }
 }
+
+.catalog__seo {
+  &__inputs {
+    input {
+      border: 1px solid #d2d2d2;
+      padding: 10px 25px 10px 10px;
+      border-radius: 5px;
+      &:focus {
+        border-color: color(green);
+      }
+    }
+    .icon_clear {
+      cursor: pointer;
+      position: absolute;
+      right: 10px;
+      top: 20%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      svg {
+        opacity: 0.4;
+        transition: all 0.1s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+    .add__form__item__input {
+      position: relative;
+      .overflow {
+        transition: all 0.3s;
+        height: 20px;
+        opacity: 0;
+        transform: translateY(-10px);
+        span {
+          margin: 0 0 0 10px;
+        }
+      }
+      &_error {
+        color: color(error);
+        font-size: 12px;
+        position: relative;
+        .overflow__auto {
+          opacity: 1;
+          transition: all 0.3s;
+          transform: translateY(0px);
+          height: 20px;
+        }
+        input {
+          border: 1px solid #d2d2d2;
+          padding: 10px 20px 10px 10px;
+          border-radius: 5px;
+          &:focus {
+            border: 1px solid color(green);
+          }
+        }
+        .icon_clear {
+          cursor: pointer;
+          position: absolute;
+          right: 10px;
+          top: 20%;
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          svg {
+            opacity: 0.4;
+            transition: all 0.1s ease;
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 
 //.active {
 //  display: flex;
