--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -10,10 +10,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 40px;
   @include ipadScreen {
     flex-direction: column;
   }
-
+  .buttons {
+    display: flex;
+    gap: 10px;
+  }
   .disabled_active {
     border-radius: 10px;
 
@@ -47,7 +51,6 @@
   .disabled {
     cursor: not-allowed;
     border-radius: 10px;
-
     button {
       display: flex;
       align-items: center;
@@ -115,7 +118,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin: 40px 0 130px 0;
+  margin: 15px 0 130px 0;
   @include ipadScreen {
     display: flex;
     flex-direction: column;
